Fixing typo, etc

--- a/apssamp.tex
+++ b/apssamp.tex
@@ -180,7 +180,7 @@ detected\cite{Young-Katzgraber2004}.  We will show this is also
 the case for the Binder ratio.  The absence of crossing is powerful evidence that a spin
 glass phase is absent in the presence of an external field. However, it has been 
 argued that the system sizes studied may be too small and far from the scaling 
-regime. To remedy this problem, one-dimensional models with longr-range power-law 
+regime. To remedy this problem, one-dimensional models with long-range power-law 
 decaying interactions \cite{Kotliar-Anderson-Stein-1983} which mimic the short range models 
 at higher dimensions have been intensively studied over the last few years \cite{Katzgraber-Young-2003a,Katzgraber-Young-2003b,
 Leuzzi-1999}. In these models much larger systems can be studied \cite{Katzgraber-Larson-Young-2009,
