--- a/apssamp.tex
+++ b/apssamp.tex
@@ -536,7 +536,7 @@ different batches $R_{12}$ is quite different, especially at low temperatures.
 
 
 This work is sponsored by the NSF EPSCoR Cooperative Agreement No. EPS-1003897 with additional support 
-from the Louisiana Board of Regents. Portions of this research were conducted with high performance computational resources provided by 
+from the Louisiana Board of Regents. This research was conducted with high performance computational resources provided by 
 Louisiana State University (http://www.hpc.lsu.edu). We thank Helmut Katzgraber and Karen 
 Tomko for useful conversations. We thank the following collaborators: Bhupender Thakur, Ariane Papke, Sean Hall, and Cade Thomasson. 
 
