--- a/apssamp.tex
+++ b/apssamp.tex
@@ -419,21 +419,21 @@ Given the difficulty in using the $R_{12}$, we investigate the source of the noi
 by studying the distribution of the susceptibility. We calculate the susceptibility
 for each disorder realization, and plotted the histogram at the lowest temperature,
 $\beta=1.8$. The distribution is highly skewed. The mean of the distribution is dominated by rare
-events, as suggested in Fig \ref{fig:hist_chi1} and \ref{fig:hist_chi2}.
-The non-Gaussian nature of the distribution suggests that the mean value might 
-not be a good indicator. 
+events, as suggested in Fig \ref{fig:hist_chi1} and \ref{fig:hist_chi2}. 
+The non-Gaussian nature of the distribution suggests that the mean value may be misleading
+given that the averaging is done on a finite number of realizations. 
 
 \begin{figure}[ht]
   \centering
   \includegraphics[width=0.4\textwidth]{img/chi1_18.png}
-  \caption{Histogram for $\chi_1$ at low temperature.}
+  \caption{Histogram for $\chi_1$ for $L=10$ and $\beta=1.8$.}
 \label{fig:hist_chi1}
 \end{figure}
 
 \begin{figure}[ht]
   \centering
   \includegraphics[width=0.4\textwidth]{img/chi2_18.png}
-  \caption{Histogram for $\chi_2$ at low temperature.}
+  \caption{Histogram for $\chi_2$ for $L=10$ and $\beta=1.8$.}
 \label{fig:hist_chi2}
 \end{figure}
 
